<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/fondo_avion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUpActivity">

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/jua"
        android:text="@string/registrarse_y_empezar_a_ransferir"
        android:textColor="@color/negro"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="595dp"

        app:layout_constraintBottom_toTopOf="@+id/btnregistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttitulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="@string/nombre"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="@string/ingresa_tu_nombre"
                    android:inputType="text"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtapellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="Apellido"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFapellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="Ingresa tu Apellido"
                    android:inputType="text"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="email"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldemailadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="Ingresa tu Email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtcontraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="Contraseña"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFcontraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="Ingresa tu Contraseña"
                    android:inputType="textPassword"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtontraseña2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/jua"
                android:text="Reingresa tu Contraseña"
                android:textColor="@color/negro"
                android:textSize="14sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFcontraseña2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="@color/blanco"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jua"
                    android:hint="Ingresa tu Contraseña"
                    android:inputType="textPassword"
                    android:textSize="14sp"

                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnregistrarse"
        style="@style/boton_celeste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="Crear Cueenta"
        app:layout_constraintBottom_toTopOf="@+id/btnirallogion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnirallogion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/jua"
        android:text="Ya tienes una Cuenta??"
        android:textColor="@color/celesteoscuro"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>